16_subseq/grade.txt
Grading at Thu Jan 14 10:42:11 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:14:8: error: statement with no effect [-Werror=unused-value]
        for (size_t i = 1; i < n; i+1){
        ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
